# Agentic

./: Makefile  README.md  docker-compose.yml  project_requirements.md
.github/: CODEOWNERS  dependabot.yml  issue-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: backend-ci.yml  container-scan.yml  docker-publish.yml  issues-prs.yml
backend/: Dockerfile  Modelfile  README.md  agentic.db  agentic.db-journal  pyproject.toml  run.py
backend/scripts/: start-ollama.sh
backend/src/backend/: cli.py  main.py
backend/src/backend/agents/: __init__.py  crew.py  factory.py
backend/src/backend/api/: __init__.py
backend/src/backend/api/v1/: api.py  dependencies.py
backend/src/backend/api/v1/endpoints/: agents.py  auth.py  tasks.py  users.py
backend/src/backend/core/: __init__.py  config.py  security.py
backend/src/backend/crud/: __init__.py  agent.py  base.py  task.py  user.py
backend/src/backend/db/: __init__.py  database.py  models.py
backend/src/backend/schemas/: __init__.py  agent.py  base.py  task.py  user.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/v1/: test_agents.py  test_auth.py
frontend/agentic/: package-lock.json  package.json
frontend/agentic/app/: page.tsx
frontend/agentic/app/components/: AgentFlow.tsx  AgentForm.tsx  AgentNode.tsx  AgentSidebar.tsx
frontend/agentic/app/services/: api.ts
frontend/agentic/app/stores/: agentFlowStore.ts
